[package]
name = "foundry-abi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Foundry's Solidity ABI bindings"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["abi", "build.rs"]

[build-dependencies]
ethers-contract-abigen = { git = "https://github.com/D0pal/ethers-rs.git", rev = "7b7c623", workspace = true }
eyre = "0.6"
syn = "2.0"

[dependencies]
foundry-macros = { path = "../macros" }

ethers-core = { git = "https://github.com/D0pal/ethers-rs.git", rev = "7b7c623", workspace = true }
ethers-contract = { git = "https://github.com/D0pal/ethers-rs.git", rev = "7b7c623", workspace = true, features = ["abigen"] }
ethers-providers = { git = "https://github.com/D0pal/ethers-rs.git", rev = "7b7c623", workspace = true }
